Implement Engagement Module backend and email improvements with Java 21 features
- Add `firstComment` to `ScheduledVideo` entity and logic to post it after upload.
- Add `addComment` and `getUnrepliedComments` to `YouTubeService`.
- Add `generateReplySuggestions` to `AiService` for AI-powered replies.
- Create `EngagementController` with optimized `/unreplied` and `/suggest` endpoints.
- Add `AudioService` and update `StreamService` and `VideoController` to support music selection and mixing.
- Update `AuthController` and `UserService` to use dynamic base URLs for email links.
- Redesign email templates (`verification`, `reset-password`, `notification`) for better UI/UX.
- Refactor `StreamResponse` and `ApiResponse` to Java Records.
- Use Java 21 Sequenced Collections in `YouTubeService`.
- Use Java 21 Virtual Threads in `StreamService` for log capturing.